--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,29 @@
+.modal {  /* чтобы изначатьно модал окно было скрыто*/
+  opacity: 0;
+  visibility: hidden;
+}
+
+.modal-enter { /*modal-базовый класс - enter-состояние*/
+  opacity: 0;
+}
+.modal-enter-active {
+  opacity: 1;
+  visibility: visible;
+  transition: all 300ms; /*время которое стоит в duration*/
+}
+.modal-enter-done {
+  opacity: 1;
+  visibility: visible; 
+}
+.modal-exit {
+  opacity: 1;
+}
+.modal-exit-active {
+  opacity: 0;
+  visibility: hidden;
+  transition: all 300ms;
+}
+
 
 .App {
   text-align: center;
